compiler/internal/frontend/testdata/parser/negative/extensions.tetra
struct Vec2:
    x: Int

extension Vec2:
